--- a/Docker-compose-dev.yml
+++ b/Docker-compose-dev.yml
@@ -1,11 +1,14 @@
 version: '3'
 services:
   web:
+    stdin_open: true
+    environment:
+      - CHOKIDAR_USEPOLLING=true
     build:
       context: .
-      dockerfile: Dockerfile
-    ports: 
-      - "80:80"
+      dockerfile: Dockerfile.dev
+    ports:
+      - '3000:3000'
     volumes:
       - /app/node_modules
       - .:/app
